<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.warnings.dialogSubstitute.SubstituteDialogFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <CalendarView
        android:id="@+id/cv_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guards"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner_guards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:foregroundTint="@color/colorAccent"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/btn_add_absence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createAbsence" />

</LinearLayout>